--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manjakang.github.io/deploy",
+  "homepage": "https://manjakang.github.io/deploy_test",
   "name": "object-gizmo-controls",
   "version": "1.0.0",
   "description": "",
